--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@ body {
 }
 
 input, select, textarea {
-  @apply shadow-sm bg-gray-50 border border-gray-300 text-gray-500  text-base font-bold  rounded-lg focus:ring-gray-600 focus:border-gray-600 block w-full p-2.5;
+  @apply shadow-sm bg-gray-50 border border-gray-300 text-gray-500  text-base font-semibold  rounded-lg focus:ring-gray-600 focus:border-gray-600 block w-full p-2.5;
 }
